# Geolocalizador

./: CMakeLists.txt
include/: KeyMatrix.h  eeprom.h  events.h  gps.h  lcd.h
src/: KeyMatrix.c  eeprom.c  events.c  gps.c  lcd.c  main.c
